Fix when full-width aligned.
Removes `width: 100%`, which breaks with full-width alignment.

--- a/resources/blocks/progress/css/style.scss
+++ b/resources/blocks/progress/css/style.scss
@@ -58,9 +58,6 @@
 	// elements. This is about the best we can do.
 	margin-top: var(--wp--style--block-gap, 2em);
 
-	// Need a 100% width to make sure it fills the width in flex layouts.
-	width: 100%;
-
 	// =====================================================================
 	// Label styles.
 	// =====================================================================
